# Tech_Challange1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: ML_Canvas.md  deploy_architecture.md  etapa2_entregavel.md  model_card.md  monitoring_plan.md
notebooks/: 01_eda.py  02_baselines.py  03_ensemble.py  04_mlp.py
src/: pipeline.py
src/api/: main.py  schemas.py
src/data/: preprocessing.py
src/features/: build_features.py
src/utils/: logger.py
tests/: test_api.py  test_pipeline.py  test_schema.py
